Confirm dialog, buttons style again

--- a/app/src/main/res/layout/activity_depense_create.xml
+++ b/app/src/main/res/layout/activity_depense_create.xml
@@ -11,25 +11,24 @@
         android:id="@+id/montant"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Montant (DH)"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/projet_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/error_depense" />
 
     <Spinner
         android:id="@+id/projet_spinner"
         android:layout_width="308dp"
         android:layout_height="41dp"
         android:layout_marginBottom="17dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +39,9 @@
         android:id="@+id/societe_spinner"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         app:layout_constraintBottom_toTopOf="@+id/date_depense"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +51,9 @@
         android:id="@+id/date_depense"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Date : jj-mm-aaaa"
         android:inputType="date"
@@ -67,11 +66,11 @@
         android:id="@+id/heur_depense"
         android:layout_width="308dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="19dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
-        android:hint="Heur : HH:mm"
+        android:hint="Heure : HH:mm"
         android:inputType="time"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_depense"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,9 +81,9 @@
         android:id="@+id/commentaire_depense"
         android:layout_width="308dp"
         android:layout_height="74dp"
-        android:layout_marginBottom="22dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Commentaire"
         android:inputType="textMultiLine"
@@ -95,16 +94,32 @@
 
     <Button
         android:id="@+id/ajouter_depense"
-        android:layout_width="131dp"
+        android:layout_width="289dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="114dp"
-        android:layout_marginStart="115dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="48dp"
+        android:background="@drawable/rounded_button"
         android:onClick="createDepense"
         android:text="Ajouter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/commentaire_depense" />
+
+    <TextView
+        android:id="@+id/error_depense"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorError"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/montant"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
