--- a/app/src/main/res/layout/activity_projet_create.xml
+++ b/app/src/main/res/layout/activity_projet_create.xml
@@ -9,82 +9,91 @@
 
     <EditText
         android:id="@+id/projet_nom"
-        android:layout_width="347dp"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="33dp"
         android:ems="10"
         android:hint="Nom du projet"
         android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/budget_projet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/budget_projet"
-        android:layout_width="0dp"
+        android:layout_width="289dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
         android:ems="10"
         android:hint="Budget Estimé (DH)"
         android:inputType="numberDecimal"
+        app:layout_constraintBottom_toTopOf="@+id/projet_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/projet_nom" />
 
-    <Spinner
-        android:id="@+id/societe_spinner"
-        android:layout_width="347dp"
+    <EditText
+        android:id="@+id/projet_date"
+        android:layout_width="289dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="22dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
+        android:ems="10"
+        android:hint="Date de début du projet"
+        android:inputType="date"
+        android:singleLine="false"
+        app:layout_constraintBottom_toTopOf="@+id/societe_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/budget_projet"
+        app:layout_constraintTop_toBottomOf="@+id/budget_projet" />
+
+    <Spinner
+        android:id="@+id/societe_spinner"
+        android:layout_width="289dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="21dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
+        app:layout_constraintBottom_toTopOf="@+id/description_projet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/projet_date"
         tools:prompt="Societe" />
 
 
     <EditText
-        android:id="@+id/projet_date"
-        android:layout_width="347dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:id="@+id/description_projet"
+        android:layout_width="289dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
         android:ems="10"
-        android:hint="Date Debut Projet"
-        android:inputType="date"
+        android:hint="Déscription"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/ajouter_projet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/societe_spinner" />
 
-    <EditText
-        android:id="@+id/description_projet"
-        android:layout_width="347dp"
-        android:layout_height="133dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="Commentaire"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/projet_date" />
-
     <Button
         android:id="@+id/ajouter_projet"
-        android:layout_width="131dp"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="140dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginBottom="58dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="57dp"
+        android:background="@drawable/rounded_button"
         android:onClick="createProjet"
         android:text="Ajouter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_projet" />
