--- a/app/src/main/res/layout/activity_tache_create.xml
+++ b/app/src/main/res/layout/activity_tache_create.xml
@@ -11,27 +11,27 @@
         android:id="@+id/date_tache"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="79dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Date : jj-mm-aaaa"
         android:inputType="date"
         app:layout_constraintBottom_toTopOf="@+id/heur_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/error_tache" />
 
     <EditText
         android:id="@+id/heur_tache"
         android:layout_width="310dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="13dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginBottom="18dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="14dp"
         android:ems="10"
-        android:hint="Heurs : HH:mm"
+        android:hint="Heure : HH:mm"
         android:inputType="time"
         app:layout_constraintBottom_toTopOf="@+id/duree_tache"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +42,9 @@
         android:id="@+id/duree_tache"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Durée (Heurs)"
         android:inputType="numberDecimal"
@@ -57,9 +57,9 @@
         android:id="@+id/projet_spinner_tache"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/societe_spinner_tache"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,9 +70,9 @@
         android:id="@+id/societe_spinner_tache"
         android:layout_width="308dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="18dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
+        android:layout_marginBottom="13dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         app:layout_constraintBottom_toTopOf="@+id/commentaire_tache"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,9 +82,9 @@
         android:id="@+id/commentaire_tache"
         android:layout_width="308dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="23dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginStart="51dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="38dp"
         android:ems="10"
         android:hint="Commentaire"
         android:inputType="textMultiLine"
@@ -96,16 +96,31 @@
 
     <Button
         android:id="@+id/ajouter_tache"
-        android:layout_width="131dp"
+        android:layout_width="289dp"
         android:layout_height="52dp"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginStart="140dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="48dp"
+        android:background="@drawable/rounded_button"
         android:onClick="createDepense"
         android:text="Ajouter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/commentaire_tache" />
+
+    <TextView
+        android:id="@+id/error_tache"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorError"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/date_tache"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
