--- a/app/src/main/res/layout/tache_edit_popup.xml
+++ b/app/src/main/res/layout/tache_edit_popup.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
         android:layout_marginEnd="46dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="46dp"
         android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="Date"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginStart="75dp"
+        android:layout_marginStart="46dp"
         android:ems="10"
         android:hint="Heur"
         android:inputType="time"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="46dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="46dp"
         android:cursorVisible="true"
         android:ems="10"
         android:focusable="true"
@@ -61,15 +61,13 @@
         app:layout_constraintTop_toBottomOf="@+id/heur_edit_tache" />
 
 
-
-
     <EditText
         android:id="@+id/commentaire_edit_tache"
         android:layout_width="220dp"
         android:layout_height="73dp"
         android:layout_marginBottom="37dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="46dp"
         android:ems="10"
         android:hint="Commentaire"
         android:inputType="textMultiLine"
@@ -83,9 +81,10 @@
         android:id="@+id/button_edit_tache"
         android:layout_width="218dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
+        android:layout_marginBottom="49dp"
         android:layout_marginEnd="46dp"
-        android:layout_marginStart="71dp"
+        android:layout_marginStart="46dp"
+        android:background="@drawable/rounded_button"
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +97,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="425dp"
         android:layout_marginStart="303dp"
-        android:layout_marginTop="16dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
