--- a/app/src/main/res/layout/depense_edit_popup.xml
+++ b/app/src/main/res/layout/depense_edit_popup.xml
@@ -81,6 +81,7 @@
         android:layout_marginBottom="62dp"
         android:layout_marginEnd="71dp"
         android:layout_marginStart="71dp"
+        android:background="@drawable/rounded_button"
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
