--- a/app/src/main/res/layout/manager_create_popup.xml
+++ b/app/src/main/res/layout/manager_create_popup.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="135dp"
-        android:layout_height="29dp"
-        android:layout_marginBottom="29dp"
-        android:layout_marginTop="16dp"
-        android:text="Create Manager"
-        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="42dp"
+        android:layout_marginEnd="84dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="32dp"
+        android:text="Ajouter un Manager"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/manager_firstname_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,22 +25,26 @@
 
     <EditText
         android:id="@+id/manager_firstname_textView"
-        android:layout_width="0dp"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:hint="@string/manager_first_name"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="48dp"
+        android:hint="Prénom du Manager"
         app:layout_constraintBottom_toTopOf="@+id/manager_lastname_textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     <EditText
         android:id="@+id/manager_lastname_textView"
-        android:layout_width="0dp"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:hint="@string/manager_last_name"
+        android:layout_marginBottom="35dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="48dp"
+        android:hint="Nom du Manager"
         app:layout_constraintBottom_toTopOf="@+id/managerCreatebtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,10 +52,14 @@
 
     <Button
         android:id="@+id/managerCreatebtn"
-        android:layout_width="wrap_content"
+        android:layout_width="289dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Create"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginStart="48dp"
+        android:background="@drawable/rounded_button"
+        android:text="Ajouter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/manager_lastname_textView" />
