--- a/app/src/main/res/layout/societe_edit_popup.xml
+++ b/app/src/main/res/layout/societe_edit_popup.xml
@@ -9,109 +9,61 @@
 
 
     <EditText
-        android:id="@+id/montant_edit"
+        android:id="@+id/raison_sociale_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="67dp"
+        android:cursorVisible="true"
         android:ems="10"
-        android:hint="Montant"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:inputType="number"
-        android:textColor="#000000"
-        android:cursorVisible="true"
+        android:hint="Raison Sociale"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/date_edit"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/date_fondation_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/date_edit"
+        android:id="@+id/date_fondation_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginBottom="39dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginStart="52dp"
         android:ems="10"
-        android:hint="Date"
+        android:hint="Date de Fondation"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/heur_edit"
+        app:layout_constraintBottom_toTopOf="@+id/button_edit_societe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/montant_edit" />
-
-    <EditText
-        android:id="@+id/heur_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="72dp"
-        android:ems="10"
-        android:hint="Heur"
-        android:inputType="time"
-        app:layout_constraintBottom_toTopOf="@+id/commentaire_edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_edit" />
-
-    <EditText
-        android:id="@+id/commentaire_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="72dp"
-        android:ems="10"
-        android:hint="Commentaire"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/button_edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heur_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/raison_sociale_edit" />
 
     <Button
-        android:id="@+id/button_edit"
+        android:id="@+id/button_edit_societe"
         android:layout_width="218dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
-        android:layout_marginEnd="71dp"
-        android:layout_marginStart="71dp"
+        android:layout_marginBottom="67dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginStart="50dp"
+        android:background="@drawable/rounded_button"
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentaire_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/date_fondation_edit" />
 
     <ImageButton
-        android:id="@+id/dismiss_edit"
+        android:id="@+id/dismiss_edit_societe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="425dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginStart="303dp"
-        android:layout_marginTop="16dp"
         android:background="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_dialog" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="209dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="454dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
